--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           </li>
         </ul>
       </nav>
-      <a class="header__logo" href="#0">
+      <a class="header__logo">
         <img
           class="header__logo-image"
           src="./images/logo-black.svg"
@@ -47,31 +47,31 @@
     </header>
     <section class="cover">
       <div class="overlay"></div>
-      <h1 class="cover__title">
-        <span class="aligned-text">О<span class="letter-spacing-extended">Н</span>О</span>
-        <span class="aligned-text aligned-text_center">ТЕ<span class="letter-spacing-extended">БЕ</span>
+      <h1 class="cover__title"> 
+        <span class="aligned-text">О<span class="letter-spacing-extended">н</span>о</span>
+        <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span>
         </span>
         <span class="aligned-text aligned-text_right">
-          <span class="letter-spacing-extended">Н</span>АД<span class="no-letter-spacing">О</span>
+          <span class="letter-spacing-extended">н</span>ад<span class="no-letter-spacing">о</span>
         </span>
       </h1>
       <div class="cover__description">
-        <h2 class="cover__description-text">
+        <p class="cover__description-text">
           Аукцион вещей, в которые никто не верил
-        </h2>
+        </p>
         <button class="bet-button">Сделать ставку</button>
       </div>
     </section>
     <section class="lots">
-      <h1 class="lots__heading">Лоты</h1>
+      <h2 class="lots__heading">Лоты</h2>
       <ul class="lots__card-list">
         <li class="lots__card-list-item">
-          <a class="card-link">
+          <a class="card-link" href="#0">
             <article class="card card_type_film">
               <div class="overlay"></div>
-              <h2 class="card__title">
+              <h3 class="card__title">
                 Фильм режиссёра, который бросил киношколу
-              </h2>
+              </h3>
               <p class="card__text">
                 Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                 ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
@@ -83,9 +83,9 @@
           <a class="card-link">
             <article class="card card_type_book">
               <div class="overlay"></div>
-              <h2 class="card__title">
+              <h4 class="card__title">
                 Книга, где описан один скучный день из жизни рекламного агента
-              </h2>
+              </h4>
               <p class="card__text">
                 Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
                 переходами на древнеанглийский. В ней одновременно
@@ -101,9 +101,9 @@
           <a class="card-link">
             <article class="card card_type_picture">
               <div class="overlay"></div>
-              <h2 class="card__title">
+              <h4 class="card__title">
                 Картина, которую повторит даже 5-летний сын маминой подруги
-              </h2>
+              </h4>
               <p class="card__text">
                 Ну действительно, там линия, тут кружочек, а здесь и вовсе
                 что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
@@ -113,10 +113,8 @@
             </article>
           </a>
         </li>
-        <li>
-          <a class="lots__look-more-link">посмотреть больше </a>
-        </li>
       </ul>
+          <a class="lots__look-more-link">посмотреть больше</a> 
     </section>
     <section class="about">
       <div class="about__column">
@@ -127,7 +125,7 @@
       <article class="about__column">
         <h1 class="about__title">Об аукционе</h1>
         <div class="about__text">
-          <p class="about__text_not_last_paragraph">
+          <p class="about__text_not_last_paragraph"> 
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
@@ -146,7 +144,7 @@
       </article>
     </section>
     <footer class="footer">
-      <div class="address">
+      <address class="address">
         <a class="header__address header__address-link" href="tel:+99995555555">
           +9 999 555 5555</a
         >
@@ -157,7 +155,7 @@
           info@sobaka.ge</a
         >
         <p class="header__address">наб. Принсенграхт 263-265,</p><p>Амстердам</p>
-      </div>
+      </address>
       <nav class="footer__menu">
         <ul class="footer__menu-list">
           <li class="footer__menu-list-item">
